# mapleall

./: .gn  BUILD.gn  Copyright  Makefile  README.md  Tutorial.md  envsetup.sh
maple_be/: .gitignore  BUILD.gn
maple_be/collect/: mpl_collect_macro_defs
maple_be/include/ad/: mad.h
maple_be/include/be/: be_common.h  be_lowerer.h  rt_support.h
maple_be/include/cg/: asm_info.h  cfg_optimizer.h  cfi.def  cfi.h  cg.h  cg_bb.h  cg_func.h  cg_phase_manager.h  dbg.def  dbg.h  eh_func.h  lsda.h  reaching_definition.h  reg_alloc.h  special_func.h  super_bb.h
maple_be/src/ad/: mad.cpp
maple_be/src/be/: be_common.cpp  switch_lowerer.cpp
maple_be/src/cg/: cfi.cpp  cg.cpp  cg_bb.cpp  cg_cfg.cpp  cg_driver.cpp  cg_func.cpp  emit.cpp  global_opt.cpp  ico.cpp  lvar.cpp  reaching_definition.cpp
mapleall/: BUILD.gn
mapleall/maple_be/: BUILD.gn
mapleall/maple_be/collect/: README.md  mpl_collect_groot_lists  mpl_collect_macro_defs
mapleall/maple_driver/: BUILD.gn
mapleall/maple_driver/defs/: default_options.def  phases.def
mapleall/maple_driver/include/: compiler.h  compiler_factory.h  compiler_selector.h  driver_runner.h  file_utils.h  mpl_options.h  option_parser.h  safe_exe.h  usages.h
mapleall/maple_driver/src/: compiler.cpp  compiler_factory.cpp  compiler_selector.cpp  driver_runner.cpp  file_utils.cpp  jbc2mpl_compiler.cpp  maple.cpp  maple_comb_compiler.cpp  mpl_options.cpp  option_parser.cpp
mapleall/maple_ipa/: BUILD.gn
mapleall/maple_ipa/include/: callgraph.h  clone.h  formregions.h  graph.h  greedyinline.h  inline.h  interleaved_manager.h  jnimethod.h  manual_ipa.def  module_phase.h  module_phase_manager.h  module_phases.def  moduleipa.h  mrtinfo.def  retype.h
mapleall/maple_ipa/src/: callgraph.cpp  clone.cpp  formregions.cpp  graph.cpp  greedyinline.cpp  inline.cpp  interleaved_manager.cpp  ipadriver.cpp  module_phase_manager.cpp  moduleipa.cpp  retype.cpp
mapleall/maple_ir/: BUILD.gn
mapleall/maple_ir/include/: all_attributes.def  bin_mir_file.h  bin_mpl_export.h  bin_mpl_import.h  bin_mplt.h  binary_op.def  cfg_primitive_types.h  cmpl.h  cmpl_generator.h  cmpl_supp.h  cmpl_to_mmpl.h  constant_fold.h  debug_info.h  gen-intrin.pl  global_tables.h  intrinsic_c.def  intrinsic_java.def  intrinsic_misc.def  intrinsic_op.h  intrinsics.def  intrinsics.h  java_eh_lower.h  keywords.def  lexer.h  memory_order_attrs.def  metadata_layout.h  mir_builder.h  mir_config.h  mir_const.h  mir_function.h  mir_lower.h  mir_module.h  mir_nodes.h  mir_parser.h  mir_pragma.h  mir_preg.h  mir_symbol.h  mir_symbol_builder.h  mir_type.h  mpl_atomic.h  (+12 more)
mapleall/maple_ir/src/: bin_func_export.cpp  bin_func_import.cpp  bin_mpl_export.cpp  bin_mpl_import.cpp  cmpl.cpp  cmpl_gen.cpp  cmpl_to_mmpl.cpp  constant_fold.cpp  debug_info.cpp  debug_info_util.cpp  global_tables.cpp  intrinsics.cpp  irbuild.cpp  lexer.cpp  mir_builder.cpp  mir_const.cpp  mir_function.cpp  mir_lower.cpp  mir_module.cpp  mir_nodes.cpp  mir_parser_expr.cpp  mir_parser_stmt.cpp  mir_pragma.cpp  mir_symbol.cpp  mir_symbol_builder.cpp  mir_type.cpp  mmpl_to_cmpl.cpp  mpl_dbg.cpp  opcode_info.cpp  option.cpp  parser.cpp  printing.cpp  verf_driver.cpp
mapleall/maple_ir/tests/: typedef.h
mapleall/maple_me/: BUILD.gn
mapleall/maple_me/include/: alias_class.h  bb.h  dominance.h  dse.h  func_emit.h  hdse.h  ipa_side_effect.h  irmap.h  irmap_build.h  lfo_function.h  lfo_inject_iv.h  lfo_iv_canon.h  lfo_mir_lower.h  lfo_mir_nodes.h  lfo_pre_emit.h  me_alias_class.h  me_analyze_rc.h  me_bb_layout.h  me_bdc_opt.h  me_cfg.h  me_cfg_opt.h  me_condbased_opt.h  me_const.h  me_const_prop.h  me_critical_edge.h  me_delegate_rc.h  me_dominance.h  me_dse.h  me_emit.h  me_fsaa.h  me_function.h  me_hdse.h  me_hti.h  me_ident_loops.h  me_ir.h  me_irmap.h  me_irmap_build.h  me_loop_canon.h  me_lower_globals.h  me_may_to_dassign.h  (+33 more)
mapleall/maple_me/src/: alias_class.cpp  bb.cpp  dominance.cpp  dse.cpp  func_emit.cpp  hdse.cpp  ipa_side_effect.cpp  irmap.cpp  irmap_build.cpp  irmap_emit.cpp  lfo_inject_iv.cpp  lfo_iv_canon.cpp  lfo_mir_lower.cpp  lfo_pre_emit.cpp  me_alias_class.cpp  me_analyzerc.cpp  me_bb_layout.cpp  me_bdc_opt.cpp  me_cfg.cpp  me_cfg_opt.cpp  me_condbased_opt.cpp  me_const_prop.cpp  me_critical_edge.cpp  me_delegate_rc.cpp  me_dominance.cpp  me_driver.cpp  me_dse.cpp  me_emit.cpp  me_fsaa.cpp  me_function.cpp  me_hdse.cpp  me_hti.cpp  me_ident_loops.cpp  me_ir.cpp  me_irmap.cpp  me_irmap_build.cpp  me_loop_canon.cpp  me_lower_globals.cpp  me_may_to_dassign.cpp  me_option.cpp  (+29 more)
mapleall/maple_phase/: BUILD.gn
mapleall/maple_phase/include/: phase.h  phase_impl.h  phase_manager.h  phasedriver.h
mapleall/maple_phase/src/: phase_impl.cpp  phasedriver.cpp
mapleall/maple_util/: BUILD.gn
mapleall/maple_util/include/: error_code.h  factory.h  file_layout.h  global_symbols.def  itab_util.h  literal_str_name.h  mpl_logging.h  mpl_scheduler.h  mpl_timer.h  mrt_direct_classinfo_list.def  muid.h  name_mangler.h  profile.h  profile_type.h  ptr_list_ref.h  string_utils.h  utils.h  version.h
mapleall/maple_util/src/: file_layout.cpp  itab_util.cpp  literal_str_name.cpp  mpl_logging.cpp  mpl_scheduler.cpp  mpl_timer.cpp  muid.cpp  name_mangler.cpp  profile.cpp
mapleall/mempool/: BUILD.gn  README
mapleall/mempool/include/: maple_string.h  mempool.h  mempool_allocator.h
mapleall/mempool/src/: MP.cpp  MPTest.cpp  MapleString.cpp
mapleall/mpl2mpl/: BUILD.gn
mapleall/mpl2mpl/include/: analyzector.h  barrierinsertion.h  class_hierarchy.h  class_init.h  coderelayout.h  decouple.h  deferralbarrier.h  gen_check_cast.h  java_lowering.h  mpl2mplexe.h  muid_replacement.h  native_stub_func.h  reflection_analysis.h  scalarreplacement.h  simplify.def  simplify.h  vtable_analysis.h  vtable_impl.h
mapleall/mpl2mpl/src/: analyzector.cpp  barrierinsertion.cpp  class_hierarchy.cpp  class_init.cpp  coderelayout.cpp  decouple.cpp  deferralbarrier.cpp  driver.cpp  gen_check_cast.cpp  java_eh_lower.cpp  java_lowering.cpp  mpl2mplexe.cpp  muid_replacement.cpp  native_stub_func.cpp  reflection_analysis.cpp  scalarreplacement.cpp  (+3 more)
(+541 files in other folders)
