#
# Copyright (C) [2020] Futurewei Technologies, Inc. All rights reverved.
#
# Licensed under the Mulan Permissive Software License v2.
# You can use this software according to the terms and conditions of the MulanPSL - 2.0.
# You may obtain a copy of MulanPSL - 2.0 at:
#
#   https://opensource.org/licenses/MulanPSL-2.0
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the MulanPSL - 2.0 for more details.
#

group("mapleall") {
    deps = [
        "${MAPLEALL_ROOT}:mapleall"
    ]
}

group("aarch64isa_headers"){
    exec_script("${MAPLEALL_ROOT}/maple_be/src/cg/script/gen_mopfor_gn.py", [
        rebase_path("${MAPLEALL_ROOT}/maple_be/src/cg/aarch64/aarch64_md.def", root_build_dir),
        rebase_path("${MAPLEALL_ROOT}/maple_be/include/cg/aarch64/aarch64_isa.def", root_build_dir),
    ])
}

if (X86_ARK==1) {
  group("x86isa_headers"){
    exec_script("${MAPLEALL_ROOT}/maple_be/src/cg/script/gen_mopfor_gn.py", [
        rebase_path("${MAPLEALL_ROOT}/maple_be/src/cg/x86/x86_md.def", root_build_dir),
        rebase_path("${MAPLEALL_ROOT}/maple_be/include/cg/x86/x86_isa.def", root_build_dir),
    ])
  }
}

