#
# Copyright (c) [2020] Huawei Technologies Co., Ltd. All rights reserved.
#
# Licensed under the Mulan Permissive Software License v2.
# You can use this software according to the terms and conditions of the MulanPSL - 2.0.
# You may obtain a copy of MulanPSL - 2.0 at:
#
#     https://opensource.org/licenses/MulanPSL-2.0
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the MulanPSL - 2.0 for more details.
#

configs = [
        "${MAPLEALL_ROOT}:mapleallcompilecfg",
    ]

static_library("libmplphase"){
    sources = [
        "src/phase_impl.cpp",
        "src/phasedriver.cpp",
    ]

    include_dirs = [
        "${MAPLEALL_ROOT}/maple_me/include",
        "${MAPLEALL_ROOT}/maple_ipa/include",
        "${MAPLEALL_ROOT}/maple_util/include",
        "${MAPLEALL_ROOT}/mempool/include",
        "${MAPLEALL_ROOT}/maple_phase/include",
        "${MAPLEALL_ROOT}/maple_ir/include",
        "${MAPLEALL_ROOT}/mpl2mpl/include",
    ]

    output_dir = "${root_out_dir}/lib/${HOST_ARCH}"
}
