#
# Copyright (c) [2020] Huawei Technologies Co.,Ltd.All rights reserved.
#
# OpenArkCompiler is licensed under the Mulan PSL v1.
# You can use this software according to the terms and conditions of the Mulan PSL v1.
# You may obtain a copy of Mulan PSL v1 at:
#
#     http://license.coscl.org.cn/MulanPSL
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v1 for more details.
#

configs = [
        "${MAPLEALL_ROOT}:mapleallcompilecfg",
    ]
static_library("libmplutil"){
    sources = [
       "src/mpl_logging.cpp",
       "../../third-party/md5/src/md5.c",
       "src/muid.cpp",
       "src/name_mangler.cpp",
       "src/literal_str_name.cpp",
       "src/file_layout.cpp",
       "src/mpl_scheduler.cpp",
       "src/itab_util.cpp",
       "src/mpl_timer.cpp",
       "src/profile.cpp"
    ]

    include_dirs = [
       "${MAPLEALL_ROOT}/maple_util/include",
       "${MAPLEALL_ROOT}/huawei_secure_c/include",
       "${MAPLEALL_ROOT}/../third-party/md5/include",
    ]

    output_dir = "${root_out_dir}/lib/${HOST_ARCH}"
}
