#
# Copyright (c) [2020] Huawei Technologies Co., Ltd. All rights reserved.
#
# Licensed under the Mulan Permissive Software License v2.
# You can use this software according to the terms and conditions of the MulanPSL - 2.0.
# You may obtain a copy of MulanPSL - 2.0 at:
#
#     https://opensource.org/licenses/MulanPSL-2.0
#
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER
# EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY OR
# FIT FOR A PARTICULAR PURPOSE.
# See the MulanPSL - 2.0 for more details.
#

configs = [
        "${MAPLEALL_ROOT}:mapleallcompilecfg",
    ]
static_library("libmplutil"){
    sources = [
       "src/mpl_logging.cpp",
       "src/muid.cpp",
       "src/name_mangler.cpp",
       "src/literal_str_name.cpp",
       "src/file_layout.cpp",
       "src/mpl_scheduler.cpp",
       "src/itab_util.cpp",
       "src/mpl_timer.cpp",
       "src/profile.cpp"
    ]

    include_dirs = [
       "${MAPLEALL_ROOT}/maple_util/include",
       "${HUAWEI_SECURE_C_ROOT}/include",
    ]

    output_dir = "${root_out_dir}/lib/${HOST_ARCH}"
}
